--- a/index.pug
+++ b/index.pug
@@ -15,21 +15,23 @@ html
 				ul
 					li
 						a contact us
-		.red
 		main
-			.container.positioner
-				.phone
-					.frame
-						.screen
-					.darker-line
-					.lighter-line
-				.content
-					.introduction
-						h2 we design and build beautiful web &amp; mobile apps
-						p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
-						button Know more
-					.form
-						form
+			.red
+				.positioner
+					.phone-top
+						.frame
+							.screen
+						.darker-line
+						.lighter-line
+					.content
+						.introduction
+							h2 we design and build beautiful web &amp; mobile apps
+							p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
+							button Know more
+			.form
+				.positioner
+					.phone-bottom
+					form
 							.form-caption Let's Talk
 							.input-section
 								input(type="text", name="firstname", placeholder="First Name")
