--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,19 @@
 }
 /* -------- Genera part ----------*/
 html {
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 * {
   padding: 0;
@@ -21,12 +32,25 @@ html {
   box-sizing: border-box;
 }
 body {
+  z-index: -1;
   line-height: 1;
   width: 100%;
   height: 100%;
   font-family: Montserrat, sans-serif;
   font-size: 16px;
   color: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 ul li {
   list-style: none;
@@ -37,6 +61,13 @@ a {
 .positioner {
   max-width: 1200px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
 }
 /* -------- Header part ----------*/
 .green-line {
@@ -45,6 +76,7 @@ a {
   height: 22px;
 }
 #header {
+  width: 100%;
   background: #e94643;
   height: 100px;
   display: -webkit-box;
@@ -89,6 +121,27 @@ a {
   padding-bottom: 1.5%;
 }
 /* -------- Main part ----------*/
+/*------ red part --------*/
+main {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
 .red {
   display: -webkit-box;
   display: -webkit-flex;
@@ -97,20 +150,8 @@ a {
   display: -ms-flexbox;
   display: flex;
   background: #ef5350;
-  position: absolute;
   width: 100%;
-  height: 583px;
   z-index: -1;
-}
-.container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  z-index: 1;
-  position: relative;
 }
 .content {
   display: -webkit-box;
@@ -119,18 +160,14 @@ a {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
   -webkit-box-flex: 1;
   -webkit-flex: 1 0 58.2%;
   -moz-box-flex: 1;
   -moz-flex: 1 0 58.2%;
   -ms-flex: 1 0 58.2%;
   flex: 1 0 58.2%;
-  padding: 15.6% 4.2% 0 10.7%;
-  height: 100%;
+  padding-right: 5.9%;
+  padding-left: 11%;
 }
 .introduction {
   display: -webkit-box;
@@ -157,23 +194,28 @@ a {
   -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
-  max-height: 583px;
-  height: 100%;
-  padding-right: 3.5%;
-  margin-bottom: 30%;
 }
 .introduction h2 {
   text-transform: uppercase;
   font-size: 1.8em;
-  margin-bottom: 4.5%;
   color: #fff;
+}
+.introduction h2::after {
+  content: "";
+  display: block;
+  padding-bottom: 4.4%;
+  height: 0;
 }
 .introduction p {
   font-size: 1.2em;
   border-bottom: 1px dashed #e94643;
-  padding-bottom: 5.5%;
-  margin-bottom: 5.2%;
   color: #fff;
+}
+.introduction p::after {
+  content: "";
+  display: block;
+  padding-bottom: 4.4%;
+  height: 0;
 }
 .introduction button {
   -webkit-align-self: flex-end;
@@ -188,10 +230,95 @@ a {
   height: 53px;
   border-radius: 6px;
 }
+.phone-top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 41.8%;
+  -moz-box-flex: 0;
+  -moz-flex: 0 0 41.8%;
+  -ms-flex: 0 0 41.8%;
+  flex: 0 0 41.8%;
+  height: 583px;
+}
+.frame {
+  position: relative;
+  top: 64px;
+  z-index: 9;
+  max-width: 100%;
+  width: 388px;
+  height: 814px;
+  background: url("../images/phone_frame.png") no-repeat;
+}
+.screen {
+  position: absolute;
+  z-index: 10;
+  max-width: 329px;
+  max-height: 583px;
+  top: 115px;
+  left: 28px;
+  width: 100%;
+  height: 100%;
+  background: url("../images/phone_screen.png") no-repeat;
+}
+.darker-line {
+  position: absolute;
+  border-bottom: 82px solid #04e4a2;
+  border-left: 50px solid transparent;
+  border-right: 35px solid transparent;
+  height: 0;
+  width: 130%;
+  left: -67.7%;
+  top: 20.3%;
+  z-index: 3;
+  -webkit-transform: rotate(37.6deg);
+}
+.lighter-line {
+  position: absolute;
+  border-bottom: 82px solid #69f0ae;
+  border-left: 50px solid transparent;
+  border-right: 35px solid transparent;
+  height: 0;
+  width: 130%;
+  left: -66.9%;
+  top: 38%;
+  z-index: 4;
+  -webkit-transform: rotate(37.6deg);
+}
+/*-------- white part --------*/
 .form {
-  margin-bottom: 5.5%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+.phone-bottom {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 41.8%;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0 41.8%;
+  -ms-flex: 1 0 41.8%;
+  flex: 1 0 41.8%;
+  width: 100%;
 }
 form {
+  width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -204,20 +331,23 @@ form {
   -moz-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 58.2%;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0 58.2%;
+  -ms-flex: 1 0 58.2%;
+  flex: 1 0 58.2%;
+  padding-right: 5.9%;
 }
 .form-caption {
   color: #ef5350;
   font-size: 1.2em;
-  padding: 1% 0 0 4.3%;
-  margin-bottom: 1.5%;
 }
 .textarea {
   -webkit-flex-basis: 100%;
   -moz-flex-basis: 100%;
   -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
-  margin-top: 1.8%;
-  margin-bottom: 2.4%;
 }
 .textarea textarea {
   padding: 13px 21px;
@@ -269,7 +399,6 @@ form {
   border-radius: 4px;
   border: 2px solid #e3f2fd;
   padding: 13px 19px;
-  margin: 1.85% 0;
   color: #636363;
 }
 .input-section input:nth-child(2),
@@ -304,80 +433,6 @@ form {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}
-.phone {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  -webkit-justify-content: flex-end;
-  -moz-justify-content: flex-end;
-  justify-content: flex-end;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 41.8%;
-  -moz-box-flex: 1;
-  -moz-flex: 1 0 41.8%;
-  -ms-flex: 1 0 41.8%;
-  flex: 1 0 41.8%;
-  margin-bottom: 2.6%;
-}
-.frame {
-  z-index: 9;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-self: center;
-  -moz-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-  position: relative;
-  max-width: 100%;
-  width: 388px;
-  height: 814px;
-  max-height: 100%;
-  background: url("../images/phone_frame.png") no-repeat;
-}
-.screen {
-  position: absolute;
-  z-index: 10;
-  max-width: 329px;
-  max-height: 583px;
-  top: 115px;
-  left: 28px;
-  width: 100%;
-  height: 100%;
-  background: url("../images/phone_screen.png") no-repeat;
-}
-.darker-line {
-  position: absolute;
-  border-bottom: 82px solid #04e4a2;
-  border-left: 50px solid transparent;
-  border-right: 35px solid transparent;
-  height: 0;
-  width: 130%;
-  left: -67.7%;
-  top: 12.3%;
-  z-index: 3;
-  -webkit-transform: rotate(37.6deg);
-}
-.lighter-line {
-  position: absolute;
-  border-bottom: 82px solid #69f0ae;
-  border-left: 50px solid transparent;
-  border-right: 35px solid transparent;
-  height: 0;
-  width: 130%;
-  left: -66.9%;
-  top: 23%;
-  z-index: 4;
-  -webkit-transform: rotate(37.6deg);
 }
 /* -------- Footer part ----------*/
 #footer {
@@ -459,8 +514,12 @@ form {
   }
 }
 @media screen and (min-width: 400px) and (max-width: 767px) {
+  .input-section input:nth-child(2),
+  .input-section .select-style select {
+    padding: 13px 19px;
+  }
   .red {
-    height: 85%;
+    height: 400px;
   }
   .container .phone {
     display: none;
