--- a/index.pug
+++ b/index.pug
@@ -27,24 +27,22 @@ html
 						.introduction
 							h2 we design and build beautiful web &amp; mobile apps
 							p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
-							button Know more
+							.padding
+								button Know more
 			.form
-				.positioner
+				.positioner-bottom
 					.phone-bottom
 					form
-							.form-caption Let's Talk
-							.input-section
-								input(type="text", name="firstname", placeholder="First Name")
-								input(type="text", name="lastname", placeholder="Last Name")
-								input(type="email", name="email", placeholder="Email Address")
-								.select-style
-									select(name="design")
-										option(value="option1") App Design
-										option(value="option2") Option 2
-							.textarea
-								textarea(name="message", rows="3", cols="80") Type your query here
-							.submit
-								input(type="submit", value="Send" class="submit")
+						.form-caption Let's Talk
+						.input-section
+							input(type="text", name="firstname", placeholder="First Name")
+							input(type="text", name="lastname", placeholder="Last Name")
+							input(type="email", name="email", placeholder="Email Address")
+							input(type="text", name="design", placeholder="App Design")
+						.textarea
+							textarea(name="message", rows="3", cols="80") Type your query here
+						.submit
+							input(type="submit", value="Send" class="submit")
 
 
 		footer(id="footer")
