--- a/styles/fonts.styl
+++ b/styles/fonts.styl
@@ -1,8 +1,20 @@
 @font-face 
 	font-family: Montserrat
-	src: local('Montserrat'), url('fonts/Montserrat-Regular.woff') format('woff'), url('fonts/Montserrat-Regular.ttf') format('truetype'), url('fonts/Montserrat-Regular.svg') format('svg')
-	font-weight: normal
+	src: local('Montserrat'), url('../fonts/Montserrat-Regular.woff') format('woff'), url('fonts/Montserrat-Regular.ttf') format('truetype'), url('fonts/Montserrat-Regular.svg') format('svg')
+	font-weight: 400
 @font-face 
 	font-family: Montserrat
-	src: local('Montserrat'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype'), url('fonts/Montserrat-Bold.svg') format('svg')
-	font-weight: bold
+	src: local('Montserrat'), url('../fonts/Montserrat-Light.woff') format('woff'), url('fonts/Montserrat-Light.ttf') format('truetype'), url('fonts/Montserrat-Light.svg') format('svg')
+	font-weight: 300
+@font-face 
+	font-family: Montserrat
+	src: local('Montserrat'), url('../fonts/Montserrat-Thin.woff') format('woff'), url('fonts/Montserrat-Thin.ttf') format('truetype'), url('fonts/Montserrat-Thin.svg') format('svg')
+	font-weight: 200
+@font-face 
+	font-family: Montserrat
+	src: local('Montserrat'), url('../fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype'), url('fonts/Montserrat-Bold.svg') format('svg')
+	font-weight: 700
+@font-face 
+	font-family: Montserrat
+	src: local('Montserrat'), url('../fonts/Montserrat-SemiBold.woff') format('woff'), url('fonts/Montserrat-SemiBold.ttf') format('truetype'), url('fonts/Montserrat-SemiBold.svg') format('svg')
+	font-weight: 600
