--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,27 @@
 @font-face {
   font-family: Montserrat;
-  src: local('Montserrat'), url("fonts/Montserrat-Regular.woff") format('woff'), url("fonts/Montserrat-Regular.ttf") format('truetype'), url("fonts/Montserrat-Regular.svg") format('svg');
-  font-weight: normal;
+  src: local('Montserrat'), url("../fonts/Montserrat-Regular.woff") format('woff'), url("fonts/Montserrat-Regular.ttf") format('truetype'), url("fonts/Montserrat-Regular.svg") format('svg');
+  font-weight: 400;
 }
 @font-face {
   font-family: Montserrat;
-  src: local('Montserrat'), url("fonts/Montserrat-Bold.woff") format('woff'), url("fonts/Montserrat-Bold.ttf") format('truetype'), url("fonts/Montserrat-Bold.svg") format('svg');
-  font-weight: bold;
+  src: local('Montserrat'), url("../fonts/Montserrat-Light.woff") format('woff'), url("fonts/Montserrat-Light.ttf") format('truetype'), url("fonts/Montserrat-Light.svg") format('svg');
+  font-weight: 300;
+}
+@font-face {
+  font-family: Montserrat;
+  src: local('Montserrat'), url("../fonts/Montserrat-Thin.woff") format('woff'), url("fonts/Montserrat-Thin.ttf") format('truetype'), url("fonts/Montserrat-Thin.svg") format('svg');
+  font-weight: 200;
+}
+@font-face {
+  font-family: Montserrat;
+  src: local('Montserrat'), url("../fonts/Montserrat-Bold.woff") format('woff'), url("fonts/Montserrat-Bold.ttf") format('truetype'), url("fonts/Montserrat-Bold.svg") format('svg');
+  font-weight: 700;
+}
+@font-face {
+  font-family: Montserrat;
+  src: local('Montserrat'), url("../fonts/Montserrat-SemiBold.woff") format('woff'), url("fonts/Montserrat-SemiBold.ttf") format('truetype'), url("fonts/Montserrat-SemiBold.svg") format('svg');
+  font-weight: 600;
 }
 /* -------- Genera part ----------*/
 html {
@@ -117,17 +132,19 @@ a {
   justify-content: space-between;
 }
 #header nav .logo {
-  font-size: 2em;
-  font-weight: bold;
-  padding-left: 13%;
+  font-size: 2.1em;
+  font-weight: 700;
+  padding-left: 12.3%;
 }
 #header nav ul {
-  padding: 0.4% 1% 0 0;
+  font-weight: 200;
+  font-size: 1.06em;
+  padding: 0.45% 0.5% 0 0;
 }
 #header nav ul li {
   text-transform: uppercase;
 }
-#header nav ul li a:hover {
+#header nav ul li a {
   border-bottom: 3px solid #fdd835;
 }
 /* -------- Main part ----------*/
@@ -176,7 +193,7 @@ main {
   -moz-flex: 1 0 58.2%;
   -ms-flex: 1 0 58.2%;
   flex: 1 0 58.2%;
-  padding: 0 5.9% 0 10.6%;
+  padding: 0 5.3% 0 10.6%;
 }
 .introduction {
   display: -webkit-box;
@@ -201,24 +218,27 @@ main {
 }
 .introduction h2 {
   text-transform: uppercase;
-  font-size: 1.8em;
+  font-weight: 400;
+  font-size: 1.92em;
   color: #fff;
 }
 .introduction h2::before {
   content: "";
   display: block;
-  padding-top: 11.7%;
+  padding-top: 11.3%;
   height: 0;
 }
-.introduction h2::after,
-.introduction p::after {
+.introduction p::after,
+.introduction p::before {
   content: "";
   display: block;
-  padding-bottom: 4.4%;
+  padding-bottom: 4.5%;
   height: 0;
 }
 .introduction p {
-  font-size: 1.2em;
+  font-size: 1.128em;
+  font-weight: 200;
+  line-height: 1.25;
   border-bottom: 1px dashed #e94643;
   color: #fff;
 }
@@ -227,20 +247,22 @@ main {
   -moz-align-self: flex-end;
   -ms-flex-item-align: end;
   align-self: flex-end;
+  padding-right: 1.5%;
 }
 .introduction .padding::before {
   content: "";
   display: block;
-  padding-top: 18%;
+  padding-top: 19%;
   height: 0;
 }
 .introduction button {
   text-transform: uppercase;
   background: #69f0ae;
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1.21em;
   width: 166px;
   height: 53px;
+  padding-left: 6%;
   border-radius: 6px;
 }
 .phone-top {
@@ -293,7 +315,7 @@ main {
   left: -67.7%;
   top: 20.3%;
   z-index: 3;
-  -webkit-transform: rotate(37.6deg);
+  -webkit-transform: rotate(37.7deg);
 }
 .lighter-line {
   position: absolute;
@@ -303,9 +325,9 @@ main {
   height: 0;
   width: 130%;
   left: -66.8%;
-  top: 38.7%;
+  top: 39.3%;
   z-index: 4;
-  -webkit-transform: rotate(37.6deg);
+  -webkit-transform: rotate(37.7deg);
 }
 /*-------- white part --------*/
 .form {
@@ -349,8 +371,9 @@ form {
 }
 .form-caption {
   color: #ef5350;
-  font-size: 1.2em;
-  padding-left: 4.6%;
+  font-size: 1.22em;
+  font-weight: 300;
+  padding-left: 4.4%;
 }
 .form-caption::before {
   content: "";
@@ -384,7 +407,6 @@ form {
   -webkit-justify-content: space-between;
   -moz-justify-content: space-between;
   justify-content: space-between;
-  height: 100%;
 }
 .input-section input {
   -webkit-flex-basis: 48%;
@@ -392,9 +414,12 @@ form {
   -ms-flex-preferred-size: 48%;
   flex-basis: 48%;
   height: 50px;
-  border-radius: 4px;
+  font-family: Montserrat;
+  font-weight: 300;
+  font-size: 0.97em;
   border: 2px solid #e3f2fd;
-  padding: 13px 19px;
+  border-radius: 4px;
+  padding: 13px 20px;
   color: #636363;
 }
 .input-section input:first-child,
@@ -408,25 +433,34 @@ form {
 .input-section input:last-child {
   background: url("../images/arrow.png") no-repeat 92% 52%;
 }
-.textarea {
-  -webkit-flex-basis: 100%;
-  -moz-flex-basis: 100%;
-  -ms-flex-preferred-size: 100%;
-  flex-basis: 100%;
+input::-webkit-input-placeholder {
+  color: #636363;
+}
+input:-moz-placeholder {
+  color: #636363;
+}
+input::-moz-placeholder {
+  color: #636363;
+}
+input:-ms-input-placeholder {
+  color: #636363;
 }
 .textarea textarea {
-  padding: 13px 21px;
+  font-family: Montserrat;
+  font-size: 0.96em;
+  font-weight: 300;
+  padding: 12px 22px;
   border: 2px solid #e3f2fd;
   border-radius: 4px;
   width: 100%;
   height: 98px;
   resize: none;
-  color: rgba(99,99,99,0.57);
+  color: #636363;
 }
 .textarea::before {
   content: "";
   display: block;
-  padding-bottom: 3.4%;
+  padding-bottom: 3.3%;
   height: 0;
 }
 .submit {
@@ -439,7 +473,8 @@ form {
   background: #e94643;
   height: 45px;
   width: 120px;
-  font-size: 1.1em;
+  font-size: 1.25em;
+  font-weight: 600;
   color: #fff;
   border-radius: 8px;
   text-transform: uppercase;
@@ -474,8 +509,10 @@ form {
   display: -ms-flexbox;
   display: flex;
 }
-#footer .footer {
+.footer {
   width: 100%;
+  font-size: 0.96em;
+  font-weight: 300;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -489,8 +526,8 @@ form {
   -ms-flex: 1 0 50%;
   flex: 1 0 50%;
 }
-#footer .footer .copyright,
-#footer .footer .contact {
+.copyright,
+.contact {
   -webkit-align-self: center;
   -moz-align-self: center;
   -ms-flex-item-align: center;
@@ -502,10 +539,10 @@ form {
   -ms-flex: 1 0 40%;
   flex: 1 0 40%;
 }
-#footer .footer .copyright {
+.copyright {
   padding-left: 9.5%;
 }
-#footer .footer .contact {
+.contact {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -517,13 +554,13 @@ form {
   -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
-  padding-left: 2.4%;
+  padding-left: 2.46%;
 }
-#footer .footer .contact .mail-icon {
+.mail-icon {
   background: url("../images/mail_icon.png") no-repeat 0 0;
   width: 30px;
   height: 24px;
-  margin-right: 19px;
+  margin: 0 3% 1% 0;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .phone-top,
@@ -537,7 +574,7 @@ form {
     height: 0;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 450px) and (max-width: 767px) {
   .phone-top,
   .phone-bottom {
     display: none;
@@ -548,6 +585,18 @@ form {
     padding-top: 10%;
     height: 0;
   }
+  .input-section {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .input-section input {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
   .input-section input:nth-child(2),
   .input-section input:last-child {
     padding: 13px 19px;
@@ -556,10 +605,39 @@ form {
   input:last-child {
     margin-bottom: 17px;
   }
+}
+@media screen and (max-width: 449px) {
+  .phone-top,
+  .phone-bottom {
+    display: none;
+  }
+  .contact .mail-icon {
+    display: none;
+  }
+  .padding::after {
+    content: "";
+    display: block;
+    padding-top: 10%;
+    height: 0;
+  }
+  .input-section {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
   .input-section input {
     -webkit-flex-basis: 100%;
     -moz-flex-basis: 100%;
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
+  }
+  .input-section input:nth-child(2),
+  .input-section input:last-child {
+    padding: 13px 19px;
+  }
+  input:nth-child(3),
+  input:last-child {
+    margin-bottom: 17px;
   }
 }
