--- a/index.pug
+++ b/index.pug
@@ -1,54 +1,1 @@
-doctype
-html
-	head
-		meta(charset="utf-8")
-		meta(lang="en")
-		meta(name="viewport", content="width=device-width, initial-scale=1")
-		title Second Project
-		link(rel="stylesheet", type="text/css", href="styles/style.css")
-	body
-		header#header
-			.green-line
-			nav.positioner
-				.logo
-					h1 indipixel
-				ul
-					li
-						a contact us
-		main
-			.red
-				.positioner
-					.phone-top
-						.frame
-							.screen
-						.darker-line
-						.lighter-line
-					.content
-						.introduction
-							h2 we design and build beautiful web &amp; mobile apps
-							p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
-							.padding
-								button Know more
-			.form
-				.positioner-bottom
-					.phone-bottom
-					form
-						.form-caption Let's Talk
-						.input-section
-							input(type="text", name="firstname", placeholder="First Name")
-							input(type="text", name="lastname", placeholder="Last Name")
-							input(type="email", name="email", placeholder="Email Address")
-							input(type="text", name="design", placeholder="App Design")
-						.textarea
-							textarea(name="message", rows="3", cols="80") Type your query here
-						.submit
-							input(type="submit", value="Send" class="submit")
-
-
-		footer(id="footer")
-			.footer.positioner
-				.copyright &copy; 2015 Indipixel design 
-				.contact 
-					.mail-icon 
-					.email contact@yourmail.com
-
+include base/base.pug
