--- a/main/content/_content.styl
+++ b/main/content/_content.styl
@@ -47,3 +47,23 @@
 		height: 53px
 		padding-left: 6%
 		border-radius: 6px 
+		
+
++for_breakpoint(desktop)
+	.padding::after
+		content: ""
+		display: block
+		padding-top: 10%
+		height: 0
++for_breakpoint(tablet)
+	.padding::after
+		content: ""
+		display: block
+		padding-top: 10%
+		height: 0
++for_breakpoint(mobile)
+	.padding::after
+		content: ""
+		display: block
+		padding-top: 10%
+		height: 0
