--- a/main/phone-bottom/_phone-bottom.styl
+++ b/main/phone-bottom/_phone-bottom.styl
@@ -1,3 +1,13 @@
 .phone-bottom
 	flex(1 0 41.8%)
 	width: 100%
+	
++for_breakpoint(desktop)
+	.phone-bottom
+		display: none
++for_breakpoint(tablet)
+	.phone-bottom
+		display: none
++for_breakpoint(mobile)
+	.phone-bottom
+		display: none
