--- a/base/base.pug
+++ b/base/base.pug
@@ -5,7 +5,7 @@ html
 		meta(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		title Second Project
-		link(rel="stylesheet", type="text/css", href="styles/style.css")
+		link(rel="stylesheet", type="text/css", href="style.css")
 	body
 		include ../header/header.pug
 		include ../main/main.pug
