--- a/main/_main.css
+++ b/main/_main.css
@@ -19,7 +19,7 @@ main {
   max-width: 100%;
   width: 388px;
   height: 814px;
-  background: url("../images/phone_frame.png") no-repeat;
+  background: url("images/phone_frame.png") no-repeat;
 }
 .screen {
   position: absolute;
@@ -30,7 +30,7 @@ main {
   left: 28px;
   width: 100%;
   height: 100%;
-  background: url("../images/phone_screen.png") no-repeat;
+  background: url("images/phone_screen.png") no-repeat;
 }
 .darker-line {
   position: absolute;
