--- a/main/form/_form__input-section.styl
+++ b/main/form/_form__input-section.styl
@@ -28,3 +28,23 @@ input::-moz-placeholder
 	color: #636363
 input:-ms-input-placeholder 
 	color: #636363
+	
++for_breakpoint(tablet)
+	.input-section
+		flex-basis(100%)
+	.input-section input 
+		flex-basis(100%)
+	.input-section input:nth-child(2), .input-section input:last-child
+		padding: 13px 19px
+	input:nth-child(3), input:last-child
+		margin-bottom: 17px
+		
++for_breakpoint(mobile)
+	.input-section
+		flex-basis(100%)
+	.input-section input 
+		flex-basis(100%)
+	.input-section input:nth-child(2), .input-section input:last-child
+		padding: 13px 19px
+	input:nth-child(3), input:last-child
+		margin-bottom: 17px
