--- a/main/phone-top/_phone-top.css
+++ b/main/phone-top/_phone-top.css
@@ -8,7 +8,7 @@
   max-width: 100%;
   width: 388px;
   height: 814px;
-  background: url("../images/phone_frame.png") no-repeat;
+  background: url("images/phone_frame.png") no-repeat;
 }
 .screen {
   position: absolute;
@@ -19,7 +19,7 @@
   left: 28px;
   width: 100%;
   height: 100%;
-  background: url("../images/phone_screen.png") no-repeat;
+  background: url("images/phone_screen.png") no-repeat;
 }
 .darker-line {
   position: absolute;
@@ -45,3 +45,6 @@
   z-index: 4;
   -webkit-transform: rotate(37.7deg);
 }
+for_breakpoint(desktop)
+for_breakpoint(tablet)
+for_breakpoint(mobile)
