--- a/main/phone-top/_phone-top.styl
+++ b/main/phone-top/_phone-top.styl
@@ -10,7 +10,7 @@
 	max-width: 100%
 	width: 388px
 	height: 814px
-	background: url("../images/phone_frame.png") no-repeat
+	background: url("images/phone_frame.png") no-repeat
 .screen
 	position: absolute
 	z-index: 10
@@ -20,7 +20,7 @@
 	left: 28px
 	width: 100%
 	height: 100%
-	background: url("../images/phone_screen.png") no-repeat
+	background: url("images/phone_screen.png") no-repeat
 			
 .darker-line
 	position: absolute
@@ -44,4 +44,14 @@
 	top: 39.3%
 	z-index: 4
 	-webkit-transform: rotate(37.7deg)
+
++for_breakpoint(desktop)
+	.phone-top
+		display: none
++for_breakpoint(tablet)
+	.phone-top
+		display: none
++for_breakpoint(mobile)
+	.phone-top
+		display: none
 	
