--- a/style.css
+++ b/style.css
@@ -25,9 +25,15 @@
 }
 html {
   min-height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
   -moz-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
@@ -48,9 +54,15 @@ body {
   font-family: Montserrat, sans-serif;
   font-size: 16px;
   color: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
   -moz-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
@@ -64,6 +76,9 @@ a {
 .positioner {
   max-width: 1200px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
@@ -72,23 +87,88 @@ a {
 .positioner-bottom {
   width: 1200px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
 }
-main {
+.green-line {
+  width: 100%;
+  background: #04e4a2;
+  height: 22px;
+}
+#header {
+  width: 100%;
+  background: #e94643;
+  height: 100px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  position: relative;
+}
+nav {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between;
+}
+.logo {
+  font-size: 2.1em;
+  font-weight: 700;
+  padding-left: 12.3%;
+}
+ul {
+  font-weight: 200;
+  font-size: 1.06em;
+  padding: 0.45% 0.5% 0 0;
+}
+li {
+  text-transform: uppercase;
+}
+li a {
+  border-bottom: 3px solid #fdd835;
+}
+main {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
   -moz-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
   width: 100%;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
   -moz-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
 }
 .red {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
@@ -97,12 +177,20 @@ main {
   z-index: -1;
 }
 .phone-top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
   -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
   -moz-justify-content: flex-end;
   justify-content: flex-end;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 41.8%;
+  -moz-box-flex: 0;
   -moz-flex: 0 0 41.8%;
   -ms-flex: 0 0 41.8%;
   flex: 0 0 41.8%;
@@ -115,7 +203,7 @@ main {
   max-width: 100%;
   width: 388px;
   height: 814px;
-  background: url("../images/phone_frame.png") no-repeat;
+  background: url("images/phone_frame.png") no-repeat;
 }
 .screen {
   position: absolute;
@@ -126,7 +214,7 @@ main {
   left: 28px;
   width: 100%;
   height: 100%;
-  background: url("../images/phone_screen.png") no-repeat;
+  background: url("images/phone_screen.png") no-repeat;
 }
 .darker-line {
   position: absolute;
@@ -152,23 +240,52 @@ main {
   z-index: 4;
   -webkit-transform: rotate(37.7deg);
 }
+@media only screen and (min-width: 768px) and (max-width: 1199) {
+  .phone-top {
+    display: none;
+  }
+}
+@media only screen and (min-width: 450px) and (max-width: 767px) {
+  .phone-top {
+    display: none;
+  }
+}
+@media only screen and (max-width: 449px) {
+  .phone-top {
+    display: none;
+  }
+}
 .content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 58.2%;
+  -moz-box-flex: 1;
   -moz-flex: 1 0 58.2%;
   -ms-flex: 1 0 58.2%;
   flex: 1 0 58.2%;
   padding: 0 5.3% 0 10.6%;
 }
 .introduction {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
   -moz-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
   -ms-flex-pack: center;
+  -webkit-justify-content: center;
   -moz-justify-content: center;
   justify-content: center;
   line-height: 1.2;
@@ -201,6 +318,8 @@ main {
   color: #fff;
 }
 .introduction .padding {
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   -ms-flex-item-align: end;
   align-self: flex-end;
   padding-right: 1.5%;
@@ -221,25 +340,79 @@ main {
   padding-left: 6%;
   border-radius: 6px;
 }
+@media only screen and (min-width: 768px) and (max-width: 1199) {
+  .padding::after {
+    content: "";
+    display: block;
+    padding-top: 10%;
+    height: 0;
+  }
+}
+@media only screen and (min-width: 450px) and (max-width: 767px) {
+  .padding::after {
+    content: "";
+    display: block;
+    padding-top: 10%;
+    height: 0;
+  }
+}
+@media only screen and (max-width: 449px) {
+  .padding::after {
+    content: "";
+    display: block;
+    padding-top: 10%;
+    height: 0;
+  }
+}
 .white {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
 }
 .phone-bottom {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 41.8%;
+  -moz-box-flex: 1;
   -moz-flex: 1 0 41.8%;
   -ms-flex: 1 0 41.8%;
   flex: 1 0 41.8%;
   width: 100%;
 }
+@media only screen and (min-width: 768px) and (max-width: 1199) {
+  .phone-bottom {
+    display: none;
+  }
+}
+@media only screen and (min-width: 450px) and (max-width: 767px) {
+  .phone-bottom {
+    display: none;
+  }
+}
+@media only screen and (max-width: 449px) {
+  .phone-bottom {
+    display: none;
+  }
+}
 form {
   width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
   -moz-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 58.2%;
+  -moz-box-flex: 1;
   -moz-flex: 1 0 58.2%;
   -ms-flex: 1 0 58.2%;
   flex: 1 0 58.2%;
@@ -264,18 +437,29 @@ form {
   height: 0;
 }
 .input-section {
+  -webkit-flex-basis: 100%;
+  -moz-flex-basis: 100%;
   -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: justify;
   -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
   -moz-justify-content: space-between;
   justify-content: space-between;
 }
 .input-section input {
+  -webkit-flex-basis: 48%;
+  -moz-flex-basis: 48%;
   -ms-flex-preferred-size: 48%;
   flex-basis: 48%;
   height: 50px;
@@ -310,6 +494,50 @@ input::-moz-placeholder {
 input:-ms-input-placeholder {
   color: #636363;
 }
+@media only screen and (min-width: 450px) and (max-width: 767px) {
+  .input-section {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .input-section input {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .input-section input:nth-child(2),
+  .input-section input:last-child {
+    padding: 13px 19px;
+  }
+  input:nth-child(3),
+  input:last-child {
+    margin-bottom: 17px;
+  }
+}
+@media only screen and (max-width: 449px) {
+  .input-section {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .input-section input {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+  .input-section input:nth-child(2),
+  .input-section input:last-child {
+    padding: 13px 19px;
+  }
+  input:nth-child(3),
+  input:last-child {
+    margin-bottom: 17px;
+  }
+}
 .textarea textarea {
   font-family: Montserrat;
   font-size: 0.96em;
@@ -329,6 +557,8 @@ input:-ms-input-placeholder {
   height: 0;
 }
 .submit {
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   -ms-flex-item-align: end;
   align-self: flex-end;
 }
@@ -364,6 +594,9 @@ input:-ms-input-placeholder {
   color: #000;
   background: #fefcf2;
   height: 73px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
@@ -372,18 +605,28 @@ input:-ms-input-placeholder {
   width: 100%;
   font-size: 0.96em;
   font-weight: 300;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 50%;
+  -moz-box-flex: 1;
   -moz-flex: 1 0 50%;
   -ms-flex: 1 0 50%;
   flex: 1 0 50%;
 }
 .copyright,
 .contact {
+  -webkit-align-self: center;
+  -moz-align-self: center;
   -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 40%;
+  -moz-box-flex: 1;
   -moz-flex: 1 0 40%;
   -ms-flex: 1 0 40%;
   flex: 1 0 40%;
@@ -392,180 +635,27 @@ input:-ms-input-placeholder {
   padding-left: 9.5%;
 }
 .contact {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
   -ms-flex-align: center;
+  -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
   padding-left: 2.46%;
 }
 .mail-icon {
-  background: url("../images/mail_icon.png") no-repeat 0 0;
+  background: url("images/mail_icon.png") no-repeat 0 0;
   width: 30px;
   height: 24px;
   margin: 0 3% 1% 0;
 }
-@media screen and (max-width: 449px) {
+@media only screen and (max-width: 449px) {
   .contact .mail-icon {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .phone-top,
-  .phone-bottom {
-    display: none;
-  }
-  .padding::after {
-    content: "";
-    display: block;
-    padding-top: 10%;
-    height: 0;
-  }
-}
-@media screen and (min-width: 450px) and (max-width: 767px) {
-  .phone-top,
-  .phone-bottom {
-    display: none;
-  }
-  .padding::after {
-    content: "";
-    display: block;
-    padding-top: 10%;
-    height: 0;
-  }
-  .input-section {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input:nth-child(2),
-  .input-section input:last-child {
-    padding: 13px 19px;
-  }
-  input:nth-child(3),
-  input:last-child {
-    margin-bottom: 17px;
-  }
-}
-@media screen and (max-width: 449px) {
-  .phone-top,
-  .phone-bottom {
-    display: none;
-  }
-  .padding::after {
-    content: "";
-    display: block;
-    padding-top: 10%;
-    height: 0;
-  }
-  .input-section {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input:nth-child(2),
-  .input-section input:last-child {
-    padding: 13px 19px;
-  }
-  input:nth-child(3),
-  input:last-child {
-    margin-bottom: 17px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .padding::after {
-    content: "";
-    display: block;
-    padding-top: 10%;
-    height: 0;
-  }
-}
-@media screen and (min-width: 450px) and (max-width: 767px) {
-  .padding::after {
-    content: "";
-    display: block;
-    padding-top: 10%;
-    height: 0;
-  }
-}
-@media screen and (max-width: 449px) {
-  .padding::after {
-    content: "";
-    display: block;
-    padding-top: 10%;
-    height: 0;
-  }
-}
-@media screen and (min-width: 450px) and (max-width: 767px) {
-  .input-section {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input:nth-child(2),
-  .input-section input:last-child {
-    padding: 13px 19px;
-  }
-  input:nth-child(3),
-  input:last-child {
-    margin-bottom: 17px;
-  }
-}
-@media screen and (max-width: 449px) {
-  .input-section {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input {
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-  .input-section input:nth-child(2),
-  .input-section input:last-child {
-    padding: 13px 19px;
-  }
-  input:nth-child(3),
-  input:last-child {
-    margin-bottom: 17px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .phone-top {
-    display: none;
-  }
-}
-@media screen and (min-width: 450px) and (max-width: 767px) {
-  .phone-top {
-    display: none;
-  }
-}
-@media screen and (max-width: 449px) {
-  .phone-top {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .phone-bottom {
-    display: none;
-  }
-}
-@media screen and (min-width: 450px) and (max-width: 767px) {
-  .phone-bottom {
-    display: none;
-  }
-}
-@media screen and (max-width: 449px) {
-  .phone-bottom {
     display: none;
   }
 }
